<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="#000000">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ib_back"
            android:text="免费注册"
            android:textColor="#ffffff"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:clickable="true"
            android:gravity="center"
            android:text="注册"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890_qwertyuiopasdfghjklzxcvbnm"
            android:hint="6-16位数字或字母(必填)"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etrepassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="6-16位字符(必填)"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/repassword"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="6-16位字符(必填)"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sex"
            android:textSize="15dp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ckman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/state_radio"
                android:text="@string/man"
                android:textSize="15dp"></RadioButton>

            <RadioButton
                android:id="@+id/ckwoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:button="@null"
                android:drawableLeft="@drawable/state_radio"
                android:text="@string/woman"
                android:textSize="15dp"></RadioButton>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/realname"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etrealname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="(选填)" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="(选填)"
            android:inputType="number" />
    </LinearLayout>


</LinearLayout>